# test-workflow

./: .gitignore  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  sonar-project.properties  tasks.py
.github/workflows/: deploy.yml  dev.yml  docs.yaml  prod.yml
docs/source/: conf.py  index.rst
tests/: test_main.py
