[tool.poetry]
name = "carlodepieri_test_workflow"
version = "0.1.1"
description = ""
authors = ["Carlo De Pieri <depieri.carlo@gmail.com>"]
packages = [
  { include = "carlodepieri_test_workflow" }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "^2.11.1"
invoke = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
